GNOME Bugzilla – Bug 640127
[PATCH] info: fix up labes to match HIG and be translators friendly
Last modified: 2011-01-21 11:42:39 UTC
Created attachment 178902 [details] [review] Proposed patch Here is patch to fix several issues in current panel, basically: * use simple capitalization and add : as per HIG * do not mark as translatable text labels in .ui file and " " strings * Mark "Versione %s" as translatable. PS are we in string change annunce yet?
Patch looks good to me. 2.91.5 started the String Change Announcement Period