info: cleanup labels to match HIG and be translators friendly

https://bugzilla.gnome.org/show_bug.cgi?id=640127